--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,32 +11,56 @@
     tools:context="com.example.yuhong.registersystem.MainActivity">
 
     <EditText
-        android:id="@+id/account"
-        android:layout_width="match_parent"
+        android:id="@+id/edit_account"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:text="帳號" />
+        android:layout_alignParentRight="true"
+
+        android:layout_toRightOf="@+id/text_account"
+        />
 
     <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@id/account"
         android:id="@+id/secret_code"
-        android:text="密碼"/>
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_below="@id/edit_account"
+        android:layout_toRightOf="@+id/text_secret_code"/>
+    <Button
+        android:id="@+id/signIn"
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:layout_below="@id/secret_code"
+        android:text="登入" />
 
     <Button
-        android:layout_width="63dp"
         android:layout_height="wrap_content"
         android:id="@+id/register"
         android:text="註冊"
-        android:layout_below="@+id/secret_code"
-        android:layout_alignParentLeft="false"
-        android:layout_alignParentStart="false"
-        android:allowUndo="false"
-        android:layout_centerVertical="false"
-        android:layout_centerHorizontal="false"
+        android:layout_below="@id/signIn"
         android:layout_centerInParent="true"
-        android:layout_alignWithParentIfMissing="false" />
+        android:layout_width="100dp" />
+    <TextView
+        android:id="@+id/text_secret_code"
+        android:layout_width="70dp"
+        android:layout_height="wrap_content"
+        android:text="密碼:"
+        android:textSize="18sp"
+        android:layout_alignBaseline="@+id/secret_code"
+        android:layout_alignBottom="@+id/secret_code"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+    <TextView
+        android:id="@+id/text_account"
+        android:layout_width="70dp"
+        android:layout_height="wrap_content"
+        android:text="帳號:"
+        android:textSize="18sp"
+        android:layout_alignBaseline="@+id/edit_account"
+        android:layout_alignBottom="@+id/edit_account"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+
 </RelativeLayout>
